--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "parser": "@typescript-eslint/parser",
   "extends": ["react-app", "plugin:@typescript-eslint/recommended", "plugin:prettier/recommended"],
   "plugins": ["@typescript-eslint", "prettier"],
-  "ignorePatterns": ["node_modules/"],
+  "ignorePatterns": ["node_modules/", "build/"],
   "env": {
     "browser": true,
     "node": true
